feat(c): add c in the language collection

--- a/.github/workflows/CI-lang.yml
+++ b/.github/workflows/CI-lang.yml
@@ -21,3 +21,12 @@ jobs:
         shell: bash
         run: bash command.sh test -l rust
 
+  C:
+    name: Validate C Code
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Test Rust
+        shell: bash
+        run: bash command.sh test -l c
