feat(bench): add benchmarking features to the framework

--- a/subjects/rust/.env
+++ b/subjects/rust/.env
@@ -4,3 +4,4 @@ command_discovery cargo
 
 export BUILD="cargo build --release"
 export COMMAND="cargo run --release"
+export CLEANUP="cargo clean --release"
